[package]
name = "bwt"
version = "0.2.0"
description = "a lightweight hd wallet tracker and query engine for Bitcoin"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shesek/bwt"
repository = "https://github.com/shesek/bwt"
keywords = [ "bitcoin", "electrum-server", "hd-wallet", "bitcoin-api", "xpub" ]
edition = "2018"
include = [ "src", "LICENSE" ]

[features]
default = [ "cli", "electrum", "http", "track-spends" ]
cli = [ "extra", "structopt", "dotenv" ]
extra = [ "dirs", "pretty_env_logger", "signal-hook" ]
electrum = []
http = [ "warp", "tokio" ]
webhooks = [ "reqwest" ]
track-spends = []
ffi = []
android = [ "jni", "android_logger" ]

[lib]
crate-type = [ "lib", "cdylib" ]

[[bin]]
name = "bwt"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
bitcoin = { version = "0.25.2", features = [ "use-serde" ] }
bitcoin_hashes = { version = "0.9.0", features = [ "serde" ] }
bitcoincore-rpc = "0.12.0"
miniscript = { version = "4.0.0", features = [ "serde" ] }
chrono = { version = "0.4.19", default-features = false }
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
anyhow = "1.0.34"
log = "0.4.11"
thiserror = "1.0.22"

# http deps
tokio = { version = "0.2.23", features = ["macros"], optional = true }
warp = { version = "0.2.5", optional = true }

# webhooks deps
reqwest = { version = "0.10.9", optional = true, features = ["json", "blocking"] }

# jni/android deps
jni = { version = "0.18.0", optional = true }
android_logger = { version = "0.9.1", optional = true }

# cli/extra deps
structopt = { version = "0.3.20", optional = true }
dotenv = { version = "0.15.0", optional = true }
dirs = { version = "3.0.1", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.1.16", optional = true }

# Statically link OpenSSL when cross-compiling to ARM
# OpenSSL is currently disabled on ARM, see https://github.com/shesek/bwt/issues/52
# [target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
# openssl = { version = "0.10", features = ["vendored"], optional = true }
# webhooks = [ "reqwest", "openssl" ]
